crates/cli/tests/snapshots/deprecated__fix_ae4d25c72a2d9b3d9e262fe572786eab32930dae755b811045fbac2eed1c4109.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.cli.toGNUCommandLineShell opts attrs\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-lib.cli.toGNUCommandLineShell opts attrs
+lib.cli.toCommandLineShell opts attrs
