crates/cli/tests/snapshots/deprecated__fix_b2566c736b6ebdeca17a2a1cd81b02dbe697d30bd882309abd6f52d6ac755c8b.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"mkAliasIfDef option\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-mkAliasIfDef option
+mkIf option.isDefined
