crates/cli/tests/snapshots/deprecated__fix_b7ca5bc4bbe1fe57468d47f2df8fac29361ae090a84ea6afdea842170517ae14.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"builtins.toPath x\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-builtins.toPath x
+let __strictix_to_path_arg = builtins.toString x; in if builtins.substring 0 1 __strictix_to_path_arg == "/" then /. + __strictix_to_path_arg else ./. + "/${__strictix_to_path_arg}"
