crates/cli/tests/snapshots/deprecated__fix_babcf3ca5fe7ee69b692a0e6ccfbfdf4f08823229d054ee85af87dc3d52d41ea.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"toPath \\\"/abc/def\\\"\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-toPath "/abc/def"
+let __strictix_to_path_arg = builtins.toString "/abc/def"; in if builtins.substring 0 1 __strictix_to_path_arg == "/" then /. + __strictix_to_path_arg else ./. + "/${__strictix_to_path_arg}"
