crates/cli/tests/snapshots/deprecated__fix_cdee039118a7d0b42a9e38478e519cde0ef023bb00f7812e2a8cd837bc4c1d68.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.isInOldestRelease 2411\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-lib.isInOldestRelease 2411
+lib.oldestSupportedReleaseIsAtLeast 2411
