crates/cli/tests/snapshots/deprecated__fix_d021f00da46d839489851cf97601ab0b8df174527d2dc8400177368e129c25b7.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.stringsWithDeps\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-pkgs.stringsWithDeps
+pkgs.lib.stringsWithDeps
