crates/cli/tests/snapshots/deprecated__fix_d16d8ff9717d7ea532cd5a3cf55efe4cacc2400b6ab9ef1940e1d2238182d6e4.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.buildPlatform\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-pkgs.buildPlatform
+pkgs.stdenv.buildPlatform
