crates/cli/tests/snapshots/deprecated__fix_db98f6f1173aa09079aafd036ca46881e33ebb308fcb0e03b2751199c0ef8752.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.cli.toGNUCommandLine opts attrs\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-lib.cli.toGNUCommandLine opts attrs
+lib.cli.toCommandLine opts attrs
