crates/cli/tests/snapshots/deprecated__fix_f18d82cf9141eb2fefbc5d159c524dde5b82bafd14faf97f4d8ff8736de0db63.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.targetPlatform\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-pkgs.targetPlatform
+pkgs.stdenv.targetPlatform
