crates/cli/tests/snapshots/deprecated__lint_0c29e08bf19161cf47bb6e3e7440b98cc345897d1a41be30d66b9e54cea1f6e2.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"lib.nixpkgsVersion\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ lib.nixpkgsVersion
   │ ─────────┬────────  
   │          ╰────────── lib.nixpkgsVersion is deprecated, use lib.version instead
───╯
