crates/cli/tests/snapshots/deprecated__lint_2591c40828b326620f16578eb5fea8586d9b78d9e002f1b3863ccacfbb323fac.snap
---
source: crates/cli/tests/deprecated.rs
expression: "\"pkgs.dontRecurseIntoAttrs\""
---
[17] Warning: Found usage of deprecated Nix feature
   ╭─[<temp_file_path>:1:1]
   │
 1 │ pkgs.dontRecurseIntoAttrs
   │ ────────────┬────────────  
   │             ╰────────────── pkgs.dontRecurseIntoAttrs is deprecated, use pkgs.lib.dontRecurseIntoAttrs instead
───╯
